--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "sparkyd.bloodbankcet"
+        applicationId "moonblade.bloodbankcet"
         minSdkVersion 19
         targetSdkVersion 20
         versionCode 1
