--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="moonblade.bloodbankcet" >
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -33,6 +34,10 @@
         <activity
             android:name=".sqldb"
             android:label="@string/title_activity_sqldb" >
+        </activity>
+        <activity
+            android:name="sparkyd.bloodbankcet.settings"
+            android:label="@string/title_activity_settings" >
         </activity>
     </application>
 
