--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
             android:name="sparkyd.bloodbankcet.settings"
             android:label="@string/title_activity_settings" >
         </activity>
+        <activity
+            android:name="sparkyd.bloodbankcet.blooddb"
+            android:label="@string/title_activity_blooddb" >
+        </activity>
     </application>
 
 </manifest>
