--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,10 @@
             android:name="sparkyd.bloodbankcet.blooddb"
             android:label="@string/title_activity_blooddb" >
         </activity>
+        <activity
+            android:name="sparkyd.bloodbankcet.ViewBlood"
+            android:label="@string/title_activity_view_blood" >
+        </activity>
     </application>
 
 </manifest>
