--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,15 +36,15 @@
             android:label="@string/title_activity_sqldb" >
         </activity>
         <activity
-            android:name="sparkyd.bloodbankcet.settings"
+            android:name="moonblade.bloodbankcet.settings"
             android:label="@string/title_activity_settings" >
         </activity>
         <activity
-            android:name="sparkyd.bloodbankcet.blooddb"
+            android:name="moonblade.bloodbankcet.blooddb"
             android:label="@string/title_activity_blooddb" >
         </activity>
         <activity
-            android:name="sparkyd.bloodbankcet.ViewBlood"
+            android:name="moonblade.bloodbankcet.ViewBlood"
             android:label="@string/title_activity_view_blood" >
         </activity>
     </application>
