Revert "fuck it"
This reverts commit 8df0e88ff8d012b26b0bfa6c43a443ee21ed8fc1.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,15 +36,15 @@
             android:label="@string/title_activity_sqldb" >
         </activity>
         <activity
-            android:name="moonblade.bloodbankcet.settings"
+            android:name=".settings"
             android:label="@string/title_activity_settings" >
         </activity>
         <activity
-            android:name="moonblade.bloodbankcet.blooddb"
+            android:name=".blooddb"
             android:label="@string/title_activity_blooddb" >
         </activity>
         <activity
-            android:name="moonblade.bloodbankcet.ViewBlood"
+            android:name=".ViewBlood"
             android:label="@string/title_activity_view_blood" >
         </activity>
     </application>
