--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="moonblade.bloodbankcet" >
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -50,6 +51,10 @@
         <activity
             android:name=".addmember"
             android:label="@string/title_activity_addmember" >
+        </activity>
+        <activity
+            android:name=".editEntry"
+            android:label="@string/title_activity_edit_entry" >
         </activity>
     </application>
 
