--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:icon="@drawable/drawericon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <meta-data
-            android:name="com.google.android.backup.api_key"
-            android:value="AEdPqrEAAAAINN2Sc3dKrJi8QqsPm6NFAF6S091NC6PNChwjUg" />
+
+        <!--<meta-data-->
+            <!--android:name="com.google.android.backup.api_key"-->
+            <!--android:value="AEdPqrEAAAAINN2Sc3dKrJi8QqsPm6NFAF6S091NC6PNChwjUg" />-->
+        
         <activity
             android:name=".Home"
             android:label="@string/app_name" >
