--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -13,9 +13,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
-        <!--<meta-data-->
-            <!--android:name="com.google.android.backup.api_key"-->
-            <!--android:value="AEdPqrEAAAAINN2Sc3dKrJi8QqsPm6NFAF6S091NC6PNChwjUg" />-->
+        <!-- <meta-data -->
+        <!-- android:name="com.google.android.backup.api_key" -->
+        <!-- android:value="AEdPqrEAAAAINN2Sc3dKrJi8QqsPm6NFAF6S091NC6PNChwjUg" /> -->
 
         <activity
             android:name=".Home"
@@ -49,6 +49,10 @@
         <activity
             android:name=".editEntry"
             android:label="@string/title_activity_edit_entry" >
+        </activity>
+        <activity
+            android:name=".signup"
+            android:label="@string/title_activity_signup" >
         </activity>
     </application>
 
